<resources>
    <string name="app_name">Clander</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="punch" >打卡</string>
    <string name="conut">倒计时</string>
    <string name="add">新建</string>
    <string name="more">更多</string>
    <string name="empty_count_text">请添加倒计时项目</string>
    <string name="delete">删除</string>
    <string name="default_title">您的打卡项目“跑步30分钟”请确认是否完成</string>
    <string name="startdate">选择开始日期</string>
    <string name="enddate">选择结束日期</string>
    <string name="time">选择时间</string>
    <string name="fortune_all_text">整体运势:</string>
    <string name="fortune_love_text">爱情运势:</string>
    <string name="fortune_career_text">事业学业:</string>
    <string name="fortune_wealth_text">财富运势:</string>
    <string name="show_today_constellation">今日运势</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>

    <!--pickView  begin -->
    <!-- From: file:/Users/Sai/Documents/workpace/android/github/Android-PickerView/pickerview/src/main/res/values/bools.xml -->
    <eat-comment/>
    <bool name="pickerview_customTextSize">false</bool>
    <!-- From: file:/Users/Sai/Documents/workpace/android/github/Android-PickerView/pickerview/src/main/res/values/colors.xml -->
    <eat-comment/>
    <color name="bgColor_overlay">#60000000</color>
    <color name="pickerview_bg_topbar">#f5f5f5</color>
    <color name="pickerview_timebtn_nor">#057dff</color>
    <color name="pickerview_timebtn_pre">#c2daf5</color>
    <color name="pickerview_topbar_title">#000000</color>
    <color name="pickerview_wheelview_textcolor_center">#2a2a2a</color>
    <color name="pickerview_wheelview_textcolor_divider">#d5d5d5</color>
    <color name="pickerview_wheelview_textcolor_out">#a8a8a8</color>
    <declare-styleable name="wheelview"><attr name="gravity"><enum name="center" value="17"/><enum name="left" value="3"/><enum name="right" value="5"/></attr><attr format="dimension" name="textSize"/><attr format="color" name="textColorOut"/><attr format="color" name="textColorCenter"/><attr format="color" name="dividerColor"/></declare-styleable>
    <!-- From: file:/Users/Sai/Documents/workpace/android/github/Android-PickerView/pickerview/src/main/res/values/dimens.xml -->
    <eat-comment/>
    <dimen name="pickerview_textsize">20sp</dimen>
    <dimen name="pickerview_topbar_btn_textsize">20sp</dimen>
    <dimen name="pickerview_topbar_height">44dp</dimen>
    <dimen name="pickerview_topbar_paddingleft">10dp</dimen>
    <dimen name="pickerview_topbar_paddingright">30dp</dimen>
    <dimen name="pickerview_topbar_title_textsize">21sp</dimen>
    <!-- From: file:/Users/Sai/Documents/workpace/android/github/Android-PickerView/pickerview/src/main/res/values/integers.xml -->
    <eat-comment/>
    <integer name="animation_default_duration">300</integer>
    <!-- From: file:/Users/Sai/Documents/workpace/android/github/Android-PickerView/pickerview/src/main/res/values/strings.xml -->
    <eat-comment/>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <!--pickView  end -->
</resources>
