<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="match_parent"
android:background="#ffffff"
android:orientation="vertical"
>
      <View
        android:id="@+id/constellation_topdiv"
        android:layout_width="fill_parent"
        android:layout_height="12dp"
        android:background="#f0f0f0"
      />
      <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/show_constellation_layout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
   >
        <TextView
            android:id="@+id/show_today_constellation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
        
            android:textSize="16dp"
            android:textColor="#6a6a6a"
            android:text="@string/show_today_constellation"/>
        <ImageView
            android:id="@+id/switch_constellation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/show_all_constellation"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
        <View
        android:id="@+id/constellation_bottomdiv"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#e4e4e4"
    />
    <LinearLayout
     android:layout_marginTop="25dp"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:orientation="horizontal"
         >
<ImageView
    android:id="@+id/show_constellation_pic"
    android:layout_width="110dp"
    android:layout_height="fill_parent"
    android:src="@drawable/constellation_baiyang"/>
<LinearLayout 
    android:layout_marginTop="-5dp"
    android:layout_marginBottom="-5dp"
   android:layout_marginLeft="21dp"
   android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

<LinearLayout
   style="@style/lyout_h"
>

<TextView
    style="@style/tv"
    android:id="@+id/fortune_all_tv"
    android:text="@string/fortune_all_text"
  />

<RatingBar
    android:id="@+id/fortune_all"
    style="@style/RatingBar"
    android:rating="3"
    />
</LinearLayout>
<LinearLayout
   style="@style/lyout_h"
>

<TextView
    style="@style/tv"
    android:id="@+id/fortune_love_tv"
    android:text="@string/fortune_love_text"
  />

<RatingBar
      android:id="@+id/fortune_love"
    style="@style/RatingBar"
    android:rating="5"
    />
</LinearLayout>


 <LinearLayout
   style="@style/lyout_h"
>

<TextView
    style="@style/tv"
    android:id="@+id/fortune_career_tv"
    android:text="@string/fortune_career_text"
  />

<RatingBar
     android:id="@+id/fortune_career"
    style="@style/RatingBar"
    android:rating="3"
    />
</LinearLayout> 

 
  <LinearLayout

   style="@style/lyout_h"
>

<TextView
    style="@style/tv"
      android:id="@+id/fortune_wealth_tv"
     android:text="@string/fortune_wealth_text"
  />

<RatingBar
   android:id="@+id/fortune_wealth"
    style="@style/RatingBar"
    android:rating="3"
    />
</LinearLayout> 

  
 
</LinearLayout>

</LinearLayout>

<TextView
    android:id="@+id/show_constellation_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="21dp"
    android:layout_marginRight="27dp"
    android:textColor="#6a6a6a"
    android:textSize="17dp"
    android:text="@string/show_today_constellation"
    android:layout_below="@+id/show_constellation_pic"/>

</LinearLayout>